--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,8 @@
         <div class="form">
           <div><span>Имя</span><input type="text" placeholder="Имя" /></div>
           <div>
-            <span>Телефон</span><input type="text" placeholder="Телефон" />
+            <span>Телефон</span
+            ><input type="text" placeholder="+7 ___ ___ __ __" />
           </div>
           <div>
             <span>Марка авто</span>
@@ -220,7 +221,9 @@
             >Добавить примечание</label
           >
           <input type="submit" value="Оставить заявку" />
-          <input type="checkbox" id="checkbox_3" /><label for="checkbox_3"
+          <input type="checkbox" id="checkbox_3" /><label
+            class="confirm_label"
+            for="checkbox_3"
             >Согласен на обработку данных</label
           >
         </div>
