--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,245 @@
         </div>
       </div>
     </section>
-    <section id="second"></section>
+    <section id="second">
+      <div class="container">
+        <ul class="offer_type">
+          <li><a href="#">Эконом</a></li>
+          <li><a href="#">Стандарт</a></li>
+          <li><a href="#">Премиум</a></li>
+        </ul>
+        <div class="car_illustration">
+          <div class="car_pointer vertical">
+            <div>
+              <h3>Багажник с крышкой</h3>
+              <span>от 7000 ₽</span>
+            </div>
+            <svg
+              class="svg"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="69px"
+              height="113px"
+            >
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M-0.001,0.608 L1.000,0.608 L1.000,44.998 L-0.001,44.998 L-0.001,0.608 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M0.397,44.603 L1.104,43.895 L50.602,93.393 L49.894,94.101 L0.397,44.603 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                stroke="#62656a"
+                stroke-width="1px"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                fill="none"
+                d="M60.000,95.997 C64.418,95.997 68.000,99.580 68.000,103.998 C68.000,108.416 64.418,111.998 60.000,111.998 C55.581,111.998 51.999,108.416 51.999,103.998 C51.999,99.580 55.581,95.997 60.000,95.997 Z"
+              />
+            </svg>
+          </div>
+          <div class="car_pointer vertical">
+            <div class="wrap">
+              <h3>Потолок (крыша)</h3>
+              <span>от 6500 ₽</span>
+            </div>
+            <svg
+              class="svg"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="69px"
+              height="112px"
+            >
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M68.500,-0.002 L67.500,-0.002 L67.500,44.389 L68.500,44.389 L68.500,-0.002 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M68.102,43.603 L67.395,42.895 L17.898,92.393 L18.604,93.101 L68.102,43.603 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                stroke="#62656a"
+                stroke-width="1px"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                fill="none"
+                d="M8.499,94.998 C12.918,94.998 16.499,98.579 16.499,102.997 C16.499,107.417 12.918,110.998 8.499,110.998 C4.081,110.998 0.499,107.417 0.499,102.997 C0.499,98.579 4.081,94.998 8.499,94.998 Z"
+              />
+            </svg>
+          </div>
+          <div class="car_pointer vertical">
+            <div class="wrap">
+              <h3>Моторный щит</h3>
+              <span> от 1000 ₽</span>
+            </div>
+            <svg
+              class="svg"
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="69px"
+              height="113px"
+            >
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M68.499,0.752 L67.499,0.752 L67.499,45.144 L68.499,45.144 L68.499,0.752 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M68.102,44.602 L67.394,43.895 L17.897,93.392 L18.604,94.100 L68.102,44.602 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                stroke="#62656a"
+                stroke-width="1px"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                fill="none"
+                d="M8.499,95.997 C12.917,95.997 16.499,99.579 16.499,103.998 C16.499,108.416 12.917,111.998 8.499,111.998 C4.081,111.998 0.499,108.416 0.499,103.998 C0.499,99.579 4.081,95.997 8.499,95.997 Z"
+              />
+            </svg>
+          </div>
+          <div class="car_pointer vertical">
+            <div class="wrap">
+              <h3>Капот</h3>
+              <span> от 2000 ₽</span>
+            </div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="69px"
+              height="113px"
+            >
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M68.499,0.752 L67.499,0.752 L67.499,45.144 L68.499,45.144 L68.499,0.752 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M68.102,44.602 L67.394,43.895 L17.897,93.392 L18.604,94.100 L68.102,44.602 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                stroke="#62656a"
+                stroke-width="1px"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                fill="none"
+                d="M8.499,95.997 C12.917,95.997 16.499,99.579 16.499,103.998 C16.499,108.416 12.917,111.998 8.499,111.998 C4.081,111.998 0.499,108.416 0.499,103.998 C0.499,99.579 4.081,95.997 8.499,95.997 Z"
+              />
+            </svg>
+          </div>
+          <div class="car_pointer">
+            <div>
+              <h3>Колесная арка</h3>
+              <span> от 2500 ₽</span>
+            </div>
+
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="112px"
+              height="69px"
+            >
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M-0.001,68.498 L-0.001,67.499 L44.390,67.499 L44.390,68.498 L-0.001,68.498 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M43.604,68.100 L42.897,67.394 L92.395,17.896 L93.102,18.603 L43.604,68.100 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                stroke="#62656a"
+                stroke-width="1px"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                fill="none"
+                d="M103.000,0.499 C107.418,0.499 110.999,4.080 110.999,8.499 C110.999,12.917 107.418,16.498 103.000,16.498 C98.581,16.498 95.000,12.917 95.000,8.499 C95.000,4.080 98.581,0.499 103.000,0.499 Z"
+              />
+            </svg>
+          </div>
+          <div class="car_pointer">
+            <div>
+              <h3>Дверь салона</h3>
+              <span> от 2700 ₽</span>
+            </div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="112px"
+              height="69px"
+            >
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M-0.001,68.498 L-0.001,67.499 L44.390,67.499 L44.390,68.498 L-0.001,68.498 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M43.604,68.100 L42.897,67.394 L92.395,17.896 L93.102,18.603 L43.604,68.100 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                stroke="#62656a"
+                stroke-width="1px"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                fill="none"
+                d="M103.000,0.499 C107.418,0.499 110.999,4.080 110.999,8.499 C110.999,12.917 107.418,16.498 103.000,16.498 C98.581,16.498 95.000,12.917 95.000,8.499 C95.000,4.080 98.581,0.499 103.000,0.499 Z"
+              />
+            </svg>
+          </div>
+          <div class="car_pointer">
+            <div>
+              <h3>Пол салона (днище)</h3>
+              <span> от 9000 ₽</span>
+            </div>
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              xmlns:xlink="http://www.w3.org/1999/xlink"
+              width="112px"
+              height="69px"
+            >
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M-0.001,68.498 L-0.001,67.499 L44.390,67.499 L44.390,68.498 L-0.001,68.498 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                fill="#62656a"
+                d="M43.604,68.100 L42.897,67.394 L92.395,17.896 L93.102,18.603 L43.604,68.100 Z"
+              />
+              <path
+                fill-rule="evenodd"
+                stroke="#62656a"
+                stroke-width="1px"
+                stroke-linecap="butt"
+                stroke-linejoin="miter"
+                fill="none"
+                d="M103.000,0.499 C107.418,0.499 110.999,4.080 110.999,8.499 C110.999,12.917 107.418,16.498 103.000,16.498 C98.581,16.498 95.000,12.917 95.000,8.499 C95.000,4.080 98.581,0.499 103.000,0.499 Z"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="http://localhost:35729/livereload.js"></script>
   </body>
 </html>
