--- a/src/index.html
+++ b/src/index.html
@@ -474,7 +474,110 @@
         </div>
       </div>
     </section>
-    <section id="third"></section>
+    <section id="third">
+      <div class="container">
+        <div class="price_packages_label">
+          <h1>Комплекты цен</h1>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink"
+            width="342px"
+            height="70px"
+          >
+            <path
+              fill-rule="evenodd"
+              fill="rgb(255, 255, 255)"
+              d="M326.999,-0.001 L341.999,-0.001 L341.999,0.999 L326.999,0.999 L326.999,-0.001 Z"
+            />
+            <path
+              fill-rule="evenodd"
+              fill="rgb(255, 255, 255)"
+              d="M341.000,0.999 L341.999,0.999 L341.999,15.000 L341.000,15.000 L341.000,0.999 Z"
+            />
+            <path
+              fill-rule="evenodd"
+              fill="rgb(255, 255, 255)"
+              d="M341.000,54.999 L341.999,54.999 L341.999,70.000 L341.000,70.000 L341.000,54.999 Z"
+            />
+            <path
+              fill-rule="evenodd"
+              fill="rgb(255, 255, 255)"
+              d="M326.999,69.000 L341.000,69.000 L341.000,70.000 L326.999,70.000 L326.999,69.000 Z"
+            />
+            <path
+              fill-rule="evenodd"
+              fill="rgb(255, 255, 255)"
+              d="M-0.000,69.000 L15.000,69.000 L15.000,70.000 L-0.000,70.000 L-0.000,69.000 Z"
+            />
+            <path
+              fill-rule="evenodd"
+              fill="rgb(255, 255, 255)"
+              d="M-0.000,54.999 L1.000,54.999 L1.000,69.000 L-0.000,69.000 L-0.000,54.999 Z"
+            />
+            <path
+              fill-rule="evenodd"
+              fill="rgb(255, 255, 255)"
+              d="M-0.000,-0.001 L1.000,-0.001 L1.000,15.000 L-0.000,15.000 L-0.000,-0.001 Z"
+            />
+            <path
+              fill-rule="evenodd"
+              fill="rgb(255, 255, 255)"
+              d="M1.000,-0.001 L15.000,-0.001 L15.000,0.999 L1.000,0.999 L1.000,-0.001 Z"
+            />
+          </svg>
+        </div>
+        <div class="price_packages">
+          <div class="block_wrap">
+            <ul class="price_packages_item">
+              <li><h2>Пакет «Эконом»</h2></li>
+              <li><h3>Снижение шума до 80%</h3></li>
+              <li><h4>От 25 500 руб</h4></li>
+              <li class="item"><p>4 двери</p></li>
+              <li class="item"><p>Пол</p></li>
+              <li class="item"><p>Арки</p></li>
+              <li class="item"><p>Пол багажника</p></li>
+              <li class="item"><p>Крышка багажника</p></li>
+              <li class="item"><p>Потолок</p></li>
+              <li class="item"><p>Капот</p></li>
+              <li>Задние крылья</li>
+              <li><a href="#">Заказать</a></li>
+            </ul>
+          </div>
+          <div class="block_wrap">
+            <ul class="price_packages_item">
+              <li><h2>Пакет «Стандарт»</h2></li>
+              <li><h3>Снижение шума до 80%</h3></li>
+              <li><h4>От 25 500 руб</h4></li>
+              <li class="item"><p>4 двери</p></li>
+              <li class="item"><p>Пол</p></li>
+              <li class="item"><p>Арки</p></li>
+              <li class="item"><p>Пол багажника</p></li>
+              <li class="item"><p>Крышка багажника</p></li>
+              <li class="item"><p>Потолок</p></li>
+              <li class="item"><p>Капот</p></li>
+              <li>Задние крылья</li>
+              <li><a href="#">Заказать</a></li>
+            </ul>
+          </div>
+          <div class="block_wrap">
+            <ul class="price_packages_item">
+              <li><h2>Пакет «Премиум»</h2></li>
+              <li><h3>Снижение шума до 80%</h3></li>
+              <li><h4>От 25 500 руб</h4></li>
+              <li class="item"><p>4 двери</p></li>
+              <li class="item"><p>Пол</p></li>
+              <li class="item"><p>Арки</p></li>
+              <li class="item"><p>Пол багажника</p></li>
+              <li class="item"><p>Крышка багажника</p></li>
+              <li class="item"><p>Потолок</p></li>
+              <li class="item"><p>Капот</p></li>
+              <li>Задние крылья</li>
+              <li><a href="#">Заказать</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="http://localhost:35729/livereload.js"></script>
   </body>
 </html>
