--- a/src/index.html
+++ b/src/index.html
@@ -187,15 +187,101 @@
           <h1>Шумоизоляция авто в Москве</h1>
           <ul>
             <li class="advert__items">
-              <img src="./img/adv1.svg" alt="" />
+              <svg
+                version="1.1"
+                id="Layer_1"
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                x="0px"
+                y="0px"
+                viewBox="0 0 512 512"
+                style="enable-background:new 0 0 512 512;"
+                xml:space="preserve"
+              >
+                <style type="text/css">
+                  .st0 {
+                    fill: #ffffff;
+                  }
+                </style>
+                <path
+                  class="st0"
+                  d="M512,469.6l-261-261c14.8-3.9,28.9-11.4,40.6-23.1c35.1-35.1,35.1-92.1,0-127.3c-32.9-32.9-84.8-34.6-120.1-5.8
+              	c-4.3-9.4-10.1-18.3-17.8-26c-35.1-35.1-92.1-35.1-127.3,0c-35.1,35.1-35.1,92.1,0,127.3c7.7,7.7,16.6,13.4,26,17.8
+              	c-28.7,35.3-27.1,87.2,5.9,120.1c35.1,35.1,92.1,35.1,127.3,0c11.6-11.6,19.2-25.7,23.1-40.6l112.5,112.5l-42.4,42.4l42.4,42.4
+              	l42.4-42.4l21.2,21.2l-42.4,42.4l42.4,42.4l42.4-42.4l42.4,42.4L512,469.6z M111.2,111.2c-11.7,11.7-30.7,11.7-42.4,0
+              	c-11.7-11.7-11.7-30.7,0-42.4c11.7-11.7,30.7-11.7,42.4,0C122.9,80.5,122.9,99.5,111.2,111.2z M143,249.1
+              	c-11.7,11.7-30.7,11.7-42.4,0c-11.7-11.7-11.7-30.7,0-42.4c11.7-11.7,30.7-11.7,42.4,0C154.7,218.4,154.7,237.4,143,249.1z
+              	 M249.1,143c-11.7,11.7-30.7,11.7-42.4,0c-11.7-11.7-11.7-30.7,0-42.4c11.7-11.7,30.7-11.7,42.4,0
+              	C260.8,112.3,260.8,131.3,249.1,143z"
+                />
+              </svg>
               <span>Шумоизоляция под ключ </span>
             </li>
             <li class="advert__items">
-              <img src="./img/adv2.svg" alt="" />
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                version="1.1"
+                id="Capa_1"
+                x="0px"
+                y="0px"
+                width="512px"
+                height="512px"
+                viewBox="0 0 461.55 461.55"
+                style="enable-background:new 0 0 461.55 461.55;"
+                xml:space="preserve"
+              >
+                <g>
+                  <g id="volume-off">
+                    <path
+                      d="M345.525,229.5c0-45.9-25.5-84.15-63.75-102v56.1l63.75,63.75C345.525,239.7,345.525,234.6,345.525,229.5z M409.275,229.5    c0,22.95-5.1,45.9-12.75,66.3l38.25,38.25c17.85-30.6,25.5-68.85,25.5-107.1c0-109.65-76.5-201.45-178.5-224.4V56.1    C355.725,81.6,409.275,147.9,409.275,229.5z M34.425,0L1.275,33.15L121.125,153H1.275v153h102l127.5,127.5V262.65L340.425,372.3    c-17.851,12.75-35.7,22.95-58.65,30.601v53.55c35.7-7.65,66.3-22.95,94.35-45.9l51,51l33.15-33.149l-229.5-229.5L34.425,0z     M230.775,25.5l-53.55,53.55l53.55,53.55V25.5z"
+                      fill="#FFFFFF"
+                    />
+                  </g>
+                </g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+                <g></g>
+              </svg>
               <span>Снижение шума до 70% </span>
             </li>
             <li class="advert__items">
-              <img src="./img/asv3.svg" alt="" /> <span>Срок — один день</span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                height="512px"
+                viewBox="0 1 511 511.99949"
+                width="512px"
+              >
+                <path
+                  d="m217.050781 108.894531c-37.351562 3.316407-71.304687 18.667969-97.925781 42.144531l20.296875 20.296876c5.96875 5.976562 5.96875 15.664062 0 21.644531-5.988281 5.988281-15.691406 5.949219-21.640625 0l-19.734375-19.738281c-20.257813 25.5-33.40625 56.871093-36.445313 91.109374h155.449219zm0 0"
+                  fill="#FFFFFF"
+                />
+                <path
+                  d="m507.519531 72.5-68.023437-68.019531c-5.972656-5.972657-15.660156-5.972657-21.632813 0-5.976562 5.976562-5.976562 15.660156 0 21.636719l23.191407 23.195312-33.890626 33.890625c7.285157 6.484375 14.722657 13.871094 21.628907 21.632813l33.894531-33.890626v-.003906l23.195312 23.195313c5.972657 5.972656 15.660157 5.976562 21.636719 0 5.976563-5.972657 5.976563-15.660157 0-21.636719zm0 0"
+                  fill="#FFFFFF"
+                />
+                <path
+                  d="m121.136719 370.128906c5.976562-5.976562 15.664062-5.976562 21.640625 0 5.976562 5.976563 5.976562 15.664063 0 21.632813l-19.796875 19.796875c29.703125 24.671875 67.828125 39.519531 109.367187 39.519531 40.175782 0 77.15625-13.878906 106.410156-37.125l-19.574218-19.570313c-5.976563-5.976562-5.976563-15.667968 0-21.644531 5.976562-5.964843 15.667968-5.964843 21.644531 0l20.132813 20.144531c26.640624-30.21875 42.824218-69.875 42.824218-113.230468 0-41.542969-14.847656-79.675782-39.519531-109.378906l-19.789063 19.789062c-5.988281 5.988281-15.671874 5.976562-21.632812 0-5.976562-5.976562-5.976562-15.65625 0-21.632812l19.871094-19.867188c-26.171875-22.082031-59.035156-36.472656-95.066406-39.667969v170.757813c0 8.445312-6.84375 15.296875-15.300782 15.296875h-170.746094c3.195313 36.023437 17.585938 68.886719 39.667969 95.058593zm0 0"
+                  fill="#FFFFFF"
+                />
+                <path
+                  d="m247.648438 47.792969v30.394531c104.351562 7.863281 186.734374 95.261719 186.734374 201.464844 0 111.6875-90.894531 202.023437-202.035156 202.023437-106.125 0-193.589844-82.324219-201.453125-186.726562h-30.394531c7.894531 121.015625 108.867188 217.050781 231.847656 217.050781 128.121094 0 232.359375-104.238281 232.359375-232.347656 0-122.992188-96.035156-223.964844-217.058593-231.859375zm0 0"
+                  fill="#FFFFFF"
+                />
+              </svg>
+              <span>Срок — один день</span>
             </li>
           </ul>
         </div>
@@ -209,22 +295,29 @@
           </div>
           <div class="inputWrap">
             <span>Марка авто</span>
-            <select>
+            <select id="select">
               <option>Выберите авто</option>
               <option>Mercedes</option>
               <option>Audi</option>
               <option>Bmw</option>
             </select>
+            <label for="select" class="select_chevron"></label>
           </div>
-          <input type="checkbox" id="checkbox_1" /><label for="checkbox_1"
+          <input type="checkbox" id="checkbox_1" /><label
+            class="chek_mark"
+            for="checkbox_1"
             >Выбрать услуги</label
           >
-          <input type="checkbox" id="checkbox_2" /><label for="checkbox_2"
+          <input type="checkbox" id="checkbox_2" /><label
+            class="chek_mark"
+            for="checkbox_2"
             >Добавить примечание</label
           >
           <input type="submit" value="Оставить заявку" />
           <div class="confirm_label">
-            <input type="checkbox" id="checkbox_3" /><label for="checkbox_3"
+            <input type="checkbox" id="checkbox_3" /><label
+              class="chek_mark"
+              for="checkbox_3"
               >Согласен на <span>обработку данных</span></label
             >
           </div>
@@ -544,7 +637,7 @@
             </ul>
           </div>
           <div class="block_wrap">
-            <ul class="price_packages_item">
+            <ul class="premium_pacckage price_packages_item">
               <li><h2>Пакет «Стандарт»</h2></li>
               <li><h3>Снижение шума до 80%</h3></li>
               <li><h4>От 25 500 руб</h4></li>
